--- a/MyFace/Views/Posts/CreatePostPage.cshtml
+++ b/MyFace/Views/Posts/CreatePostPage.cshtml
@@ -3,3 +3,11 @@
 @{
     Layout = "_Layout";
 }
+
+<form>
+    <p>Input Message</p>
+    <input type="text" name="message-input"></input>
+    <p>Input Image</p>
+    <input type="text" name="image-input"></input>
+    <input type="submit"></input>
+</form>#
