--- a/MyFace/Views/Shared/_Layout.cshtml
+++ b/MyFace/Views/Shared/_Layout.cshtml
@@ -22,6 +22,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Posts" asp-action="CreatePostPage">Create Post</a>
+                        </li>
                     </ul>
                 </div>
             </div>
