--- a/MyFace/Views/Posts/CreatePostPage.cshtml
+++ b/MyFace/Views/Posts/CreatePostPage.cshtml
@@ -7,7 +7,7 @@
     Layout = "_Layout";
 }
 
-<form method="POST">
+<form method="post" action="/posts/create">
     <label for="message-input">Input Message</label><br>
     <input id="message-input" type="text" name="message-input"></input><br>
     <label for="message-image">Input Image</label><br>
