--- a/MyFace/wwwroot/css/site.css
+++ b/MyFace/wwwroot/css/site.css
@@ -1,4 +1,14 @@
 .post-message {
-    font-size: 30px;
+    font-size: 50px;
 }
 
+.list-of-posts {
+    display: flex;
+    justify-content: center;
+}
+
+.pageContent {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
