--- a/MyFace/Views/Posts/PostsPage.cshtml
+++ b/MyFace/Views/Posts/PostsPage.cshtml
@@ -6,35 +6,6 @@
 }
 
 @functions {
-
-    public void displayPosts()
-    {
-        <ul class="pageContent">
-        @foreach (var post in Model.Posts.OrderBy(x => x.PostedAt))
-        {
-            <li class="list-of-posts">
-                <div class="post-user">
-                    <p class="display-name">Display name: @post.PostedBy.DisplayName, Username: @post.PostedBy.Username</p>
-                    <img class="profile-picture" height="100" width="100" src="@post.PostedBy.ProfileImageUrl" alt="broken Profile pic :(">
-                </div>
-               
-                <div class="post-message">
-                    <p class="post-message">Message: @post.Message</p>
-                    <img class="post-image" height="200" width="200" src="@post.ImageUrl" alt="broken post pic :(">
-                </div>
-                
-                <div class="post-data">
-                    <p class="post-time">Posted at: @post.PostedAt</p>
-                    @* <p class="post-likes">Likes: @getLikes(post.LikedBy)</p> *@
-                    <p class="post-dislikes">Disikes: @post.LikedBy/p>
-                </div>
-                
-                <hr>
-            </li>
-        }
-        </ul>
-    }
-
     public int getLikes(IEnumerable<UserViewModel> likesList)
     {
         var counter = 0;
@@ -52,12 +23,36 @@
     }
 }
 
-@{
-    displayPosts();
-}
 <main>
     <h1>My Face Posts</h1>
+    <article>
+        <ul class="pageContent">
+                @foreach (var post in Model.Posts.OrderBy(x => x.PostedAt))
+                {
+                    <li class="list-of-posts">
+                        <div class="post-user">
+                            <p class="display-name">Display name: @post.PostedBy.DisplayName, Username: @post.PostedBy.Username</p>
+                            <img class="profile-picture" height="100" width="100" src="@post.PostedBy.ProfileImageUrl" alt="broken Profile pic :(">
+                        </div>
+                       
+                        <div class="post-message">
+                            <p class="post-message">Message: @post.Message</p>
+                            <img class="post-image" height="200" width="200" src="@post.ImageUrl" alt="broken post pic :(">
+                        </div>
+                        
+                        <div class="post-data">
+                            <p class="post-time">Posted at: @post.PostedAt</p>
+                            @* <p class="post-likes">Likes: @getLikes(post.LikedBy)</p> *@
+                            <p class="post-dislikes">Disikes: placeholder/p>
+                        </div>
+                        
+                        <hr>
+                    </li>
+                }
+                </ul>
+    </article>
 </main>
+
 
 <style>
     
