--- a/MyFace/Views/Shared/_Layout.cshtml
+++ b/MyFace/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
+            <div class="navbar-container">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">MyFace</a>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
