--- a/MyFace/Views/Posts/CreatePostPage.cshtml
+++ b/MyFace/Views/Posts/CreatePostPage.cshtml
@@ -8,18 +8,18 @@
 }
 
 <form method="post" action="/posts/create">
-    <label for="message-input">Input Message</label><br>
-    <input id="message-input" type="text" name="message-input"></input><br>
-    <label for="message-image">Input Image</label><br>
-    <input id="message-image" type="text" name="image-input"></input><br>
+    <label for="userId">User Id</label><br/>
+    <input type="number" id="userId" name="userId" alt="user id input box"/><br/>
+    <label for="Message">Input Message</label><br>
+    <input id="Message" type="text" name="Message"></input><br>
+    <label for="ImageUrl">Input Image</label><br>
+    <input id="ImageUrl-image" type="text" name="ImageUrl"></input><br>
     <input type="submit"></input>
 </form>
 
 @{
     CreatePostRequestModel thing = new CreatePostRequestModel();
-    // ImageUrl = postModel.ImageUrl,
-    // Message = postModel.Message,
-    // PostedAt = DateTime.Now,
-    // UserId = postModel.UserId,
-    // How do we httppost?
+    // Message
+    // ImageUrl
+    // UserId
 }
