--- a/MyFace/Views/Posts/CreatePostPage.cshtml
+++ b/MyFace/Views/Posts/CreatePostPage.cshtml
@@ -7,6 +7,8 @@
     Layout = "_Layout";
 }
 
+<!-- TODO add styling to Create post page -->
+
 <form method="post" action="/posts/create">
     <label for="userId">User Id</label><br/>
     <input type="number" id="userId" name="userId" alt="user id input box"/><br/>
