--- a/MyFace/Views/Posts/PostsPage.cshtml
+++ b/MyFace/Views/Posts/PostsPage.cshtml
@@ -4,7 +4,7 @@
 @{
     Layout = "_Layout";
 }
-
+<!-- TODO get likes and dislikes counter working -->
 @functions {
     public int getLikes(IEnumerable<UserViewModel> likesList)
     {
