--- a/MyFace/Views/Posts/PostsPage.cshtml
+++ b/MyFace/Views/Posts/PostsPage.cshtml
@@ -5,6 +5,8 @@
     Layout = "_Layout";
 }
 <!-- TODO get likes and dislikes counter working -->
+<!-- TODO display username or Displayname -->
+
 @functions {
     public int getLikes(IEnumerable<UserViewModel> likesList)
     {
