Added create user

--- a/MyFace/Views/Shared/_Layout.cshtml
+++ b/MyFace/Views/Shared/_Layout.cshtml
@@ -20,6 +20,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="UsersPage">Users</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="CreateUserPage">Create User</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
