--- a/MyFace/Views/Posts/PostsPage.cshtml
+++ b/MyFace/Views/Posts/PostsPage.cshtml
@@ -6,6 +6,7 @@
 }
 <!-- TODO get likes and dislikes counter working -->
 <!-- TODO display username or Displayname -->
+<!-- TODO Next 10 button? -->
 
 @functions {
     public int getLikes(IEnumerable<UserViewModel> likesList)
