--- a/MyFace/wwwroot/css/site.css
+++ b/MyFace/wwwroot/css/site.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Space+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Karla&display=swap');
 
 * {
     font-family: 'Space Mono', monospace;
@@ -42,4 +43,64 @@ post-message {
 
 .nav-link{
     text-decoration: none;
+}
+
+/* Mobile Nav bar */
+
+/* Style the navigation menu */
+.topnav {
+    overflow: hidden;
+    background-color: #2a7f6b;
+    position: relative;
+}
+
+/* Hide the links inside the navigation menu (except for logo/home) */
+.topnav #myLinks {
+    display: none;
+}
+
+/* Style navigation menu links */
+.topnav a {
+    color: white;
+    padding: 16px 18px;
+    text-decoration: none;
+    font-size: 17px;
+    display: block;
+}
+
+.icon {
+    height: 30px;
+    width: 30px;
+}
+
+/* Style the hamburger menu */
+.topnav a.icon {
+    background: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+
+/* Add a grey background color on mouse-over */
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+/* Style the active link (or home/logo) */
+.logo {
+    background-color: #04AA6D;
+    color: white;
+    font-weight: 700;
+    font-size: 25px;
+    font-family: 'Karla', sans-serif;
+    background-color: #1f6555;
+    flex: 1;
+}
+
+.topnav a {
+    font-size: 25px;
 }
