Add working responsive navbar

--- a/MyFace/Views/Shared/_Layout.cshtml
+++ b/MyFace/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
           <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
       </div>
       <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
-      <a class="icon" onclick="myFunction()">
+      <a class="icon" onclick="toggleBurgerMenu()">
         <i class="fa fa-bars"></i>
       </a>
     </div>
