Fix navbar not displaying on window reload

--- a/MyFace/Views/Shared/_Layout.cshtml
+++ b/MyFace/Views/Shared/_Layout.cshtml
@@ -13,9 +13,9 @@
     <div class="topnav">
       <a href="#home" class="logo">MyFace</a>
       <!-- Navigation links (hidden by default) -->
-      <div id="myLinks">
-          <a class="nav-link text-dark" asp-area="" asp-controller="Posts" asp-action="CreatePostPage">Create Post</a>
-          <a class="nav-link text-dark" asp-area="" asp-controller="Posts" asp-action="PostsPage">Posts</a>
+      <div id="myLinks">          
+          <a class="nav-link text-dark" asp-area="" asp-controller="Posts" asp-action="PostsPage">Homepage</a>
+          <a class="nav-link text-dark" asp-area="" asp-controller="Posts" asp-action="CreatePostPage">Post</a>
           <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="UsersPage">Users</a>
           <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
       </div>
