Fix post page styling

--- a/MyFace/Views/Posts/PostsPage.cshtml
+++ b/MyFace/Views/Posts/PostsPage.cshtml
@@ -28,6 +28,8 @@
     }
 }
 
+<!-- TODO make "list of posts" margin a property of a higher level class (descendants/direct descendants)-->
+
 <main>
     <h1 class="page-title">My Face Posts</h1>
     <article class="posts-article">
