--- a/MyFace/Views/Users/CreateUserPage.cshtml
+++ b/MyFace/Views/Users/CreateUserPage.cshtml
@@ -5,18 +5,20 @@
 }
 
 <form method="post" action="/users/create">
-    <hr/>
-    <label for="FirstName">First name: </label><br/>
-    <input id="FirstName" type ="text" name="FirstName"/><br/>
-    <label for="LastName">Last name: </label><br/>
-    <input id="LastName" type ="text" name="LastName"/><br/>
-    <label for="Email">Email: </label><br/>
-    <input id="Email" type ="text" name="Email"/><br/>
-    <label for="Username">Username: </label><br/>
-    <input id="Username" type ="text" name="Username"/><br/>
-    <label for="ProfileImageUrl">Profile Image: </label><br/>
-    <input id="ProfileImageUrl" type ="text" name="ProfileImageUrl"/><br/>
-    <label for="CoverImageUrl">Cover Image: </label><br/>
-    <input id="CoverImageUrl" type ="text" name="CoverImageUrl"/><br/>
-    <input type="submit"/>
+    <fieldset>
+        
+        <label for="FirstName">First name: </label><br/>
+        <input id="FirstName" type="text" name="FirstName"/><br/>
+        <label for="LastName">Last name: </label><br/>
+        <input id="LastName" type="text" name="LastName"/><br/>
+        <label for="Email">Email: </label><br/>
+        <input id="Email" type="text" name="Email"/><br/>
+        <label for="Username">Username: </label><br/>
+        <input id="Username" type="text" name="Username"/><br/>
+        <label for="ProfileImageUrl">Profile Image: </label><br/>
+        <input id="ProfileImageUrl" type="text" name="ProfileImageUrl"/><br/>
+        <label for="CoverImageUrl">Cover Image: </label><br/>
+        <input id="CoverImageUrl" type="text" name="CoverImageUrl"/><br/>
+        <input type="submit"/>
+    </fieldset>
 </form>
