Add responsive image size

--- a/MyFace/wwwroot/css/site.css
+++ b/MyFace/wwwroot/css/site.css
@@ -115,11 +115,13 @@
 /* Posts layout */
 
 .post-message {
-
+    margin: 20px 0;
 }
 
 .list-of-posts {
     background-color: white;
+    padding: 10px;
+    margin: 10px 0;
 }
 
 .pageContent {
@@ -155,12 +157,12 @@ ul {
     flex-direction: row-reverse;
     justify-content: flex-end;
     align-items: center;
+    
 }
 
 .post-user .profile-picture {
     height: 100px;
     width: 100px;
-    margin: 10px;
     border-style: solid;
     border-color: #1f6555;
     border-width: thick;
@@ -170,8 +172,8 @@ ul {
 }
 
 div.post-user-info {
-    display: flex;
     flex-direction: column;
+    margin-left: 10px;
 }
 
 p.display-name {
@@ -180,4 +182,18 @@ p.display-name {
 
 p.post-time {
     color: rgba(0, 0, 0, 0.43);
+    font-size: 12px;
+}
+
+p {
+    display: block;
+    margin-block-start: 0;
+    margin-block-end: 0;
+    margin-inline-start: 0;
+    margin-inline-end: 0;
+}
+
+.post-image {
+    max-height: 100%;
+    max-width: 100%;
 }
