--- a/MyFace/Views/Posts/PostsPage.cshtml
+++ b/MyFace/Views/Posts/PostsPage.cshtml
@@ -46,8 +46,8 @@
                         </div>
                        
                         <div class="post-message">
-                            <p class="post-message">Message: @post.Message</p>
-                            <img class="post-image" height="200" width="200" src="@post.ImageUrl" alt="broken post pic :(">
+                            <p class="post-message">@post.Message</p>
+                            <img class="post-image" src="@post.ImageUrl" alt="broken post pic :(">
                         </div>
                         
                         <div class="post-data">
