add likes/dislikes styling

--- a/MyFace/Views/Posts/PostsPage.cshtml
+++ b/MyFace/Views/Posts/PostsPage.cshtml
@@ -51,9 +51,8 @@
                         </div>
                         
                         <div class="post-data">
-                            <p class="post-time">Posted at: @post.PostedAt</p>
-                            @* <p class="post-likes">Likes: @getLikes(post.LikedBy)</p> *@
-                            <p class="post-dislikes">Disikes: placeholder/p>
+                            <p class="post-likes">&#x1F44D placeholder</p>
+                            <p class="post-dislikes">&#x1F44E placeholder</p>
                         </div>
                     </li>
                 }
