Fix nav bar sizing bug

--- a/MyFace/Views/Posts/PostsPage.cshtml
+++ b/MyFace/Views/Posts/PostsPage.cshtml
@@ -31,8 +31,8 @@
                     </div>
                         
                     <div class="post-data">
-                        <p class="post-likes">&#x1F44D placeholder @post.LikedBy.Count()</p>
-                        <p class="post-dislikes">&#x1F44E placeholder</p>
+                        <p class="post-likes">&#x1F44D @post.LikedBy.Count()</p>
+                        <p class="post-dislikes">&#x1F44E @post.DislikedBy.Count()</p>
                     </div>
                 </li>
             }
