--- a/MyFace/wwwroot/css/site.css
+++ b/MyFace/wwwroot/css/site.css
@@ -75,6 +75,7 @@
         justify-content: space-between;
         background-color: #2a7f6b;
         position: relative;
+        align-items: center;
     }
 
     .topnav a.icon {
@@ -89,7 +90,7 @@
     /* Style navigation menu links */
     .topnav a {
         color: white;
-        padding: 16px 18px;
+        padding: 12px 18px;
         text-decoration: none;
         font-size: 17px;
         display: block;
@@ -97,13 +98,16 @@
 
     /* Style the active link (or home/logo) */
     .logo {
-        background-color: #04AA6D;
         color: white;
         font-weight: 700;
         font-size: 25px;
         font-family: 'Karla', sans-serif;
         background-color: #1f6555;
         flex: 1;
+    }
+    
+    #logo {
+        padding: 16px 20px;
     }
 
     .topnav a {
