--- a/MyFace/Views/Shared/_Layout.cshtml
+++ b/MyFace/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
 <body>
 <header>
     <div class="topnav">
-      <a href="#home" class="logo">MyFace</a>
+      <a href="#home" class="logo" id="logo">MyFace</a>
       <!-- Navigation links (hidden by default) -->
       <div id="myLinks">          
           <a class="nav-link text-dark" asp-area="" asp-controller="Posts" asp-action="PostsPage">Homepage</a>
