Fix white line under profile picture

--- a/MyFace/wwwroot/css/site.css
+++ b/MyFace/wwwroot/css/site.css
@@ -170,6 +170,7 @@ ul {
     border-style: solid;
     border-color: #1f6555;
     border-width: thick;
+    background-color: #1f6555;
 }
 
 .posts-article {
